--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-:root{
-    --font-faily: "Kanit", sans-serif;
+:root {
+    --font-family: "Kanit", sans-serif;
+    --font-game: "Press Start 2P", cursive;
     --bg-color: #ABC4AA;
-    --primary-color:#675D50;
-    --second-color: #A9907E;
-
+    --primary-color: #e861d7;
+    --second-color: #5561d3;
 }
 
-body{
-    background-color: var(--bg-color);
+body {
+    background-image: url(img/background.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: var(--primary-color);
     min-height: 100vh;
     display: flex;
@@ -18,35 +22,36 @@ body{
     justify-content: center;
     text-align: center;
     margin: 0;
-    font-family: var(--font-faily);
+    font-family: var(--font-family); /* Define a fonte padrão */
 }
 
-h1{
-    font-size: 5em;
+h1 {
+    font-size: 3em;
+    font-family: var(--font-game);
+    color: var(--second-color);
 }
 
-h2{
+h2 {
     font-size: 4em;
 }
 
-h3{
+h3 {
     font-size: 2em;
     margin-top: 50px;
 }
 
-.mensagem{
+.mensagem {
     font-size: 1.5em;
     margin-top: 40px;
 }
 
-.box{
+.box {
     border: 2px solid var(--primary-color);
     border-radius: 12px;
     display: inline-block;
     font-size: 4em;
     padding: 10px;
     margin: 30px;
-
 }
 
 input[type="text"] {
@@ -61,10 +66,11 @@ button {
     color: var(--primary-color);
     border: none;
     cursor: pointer;
+    transition: background-color 0.3s ease; /* Adiciona transição suave */
 }
 
 button:hover {
-    background-color: var(--second-color);
+    background-color: #3b4cc0; /* Alterar para uma cor diferente se desejar */
 }
 
 #dica {
@@ -72,7 +78,7 @@ button:hover {
     font-weight: bold;
 }
 
-.btn-jogar{
+.btn-jogar {
     padding: 8px;
     border: 0;
     background-color: var(--primary-color);
